# docs/swagger.json
@@ -10,12 +10,9 @@
     "paths": {
         "/api/get/{id}": {
             "get": {
-                "description": "Fetches a job by its ID with partial content handling",
+                "description": "Fetches a job by its `id` (provided by the user) with partial content handling",
                 "produces": [
                     "application/json"
-                ],
-                "tags": [
-                    "Jobs"
                 ],
                 "summary": "Retrieve a job from the queue",
                 "parameters": [
@@ -57,15 +54,12 @@
         },
         "/api/upload": {
             "post": {
-                "description": "Validates and creates a new job in the system",
+                "description": "Upload a payload. `id` is a unique user-provided job identificator. The `input` field must contain a base64 encoded`.zip` file with a `run.sh` script and the input data. `slurml` marks the job for redirection to the `slurml` endpoint (wip)",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
-                ],
-                "tags": [
-                    "Jobs"
                 ],
                 "summary": "Upload a new job to the queue",
                 "parameters": [
@@ -75,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/jobs.Job"
+                            "$ref": "#/definitions/jobs.Upload"
                         }
                     }
                 ],
@@ -120,14 +114,11 @@
         "jobs.Job": {
             "type": "object",
             "properties": {
-                "ID": {
+                "id": {
                     "type": "string"
                 },
-                "Input": {
+                "input": {
                     "type": "string"
-                },
-                "Slurml": {
-                    "type": "boolean"
                 },
                 "lastUpdated": {
                     "type": "string"
@@ -144,8 +135,25 @@
                 "slurmID": {
                     "type": "integer"
                 },
+                "slurml": {
+                    "type": "boolean"
+                },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "jobs.Upload": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "input": {
+                    "type": "string"
+                },
+                "slurml": {
+                    "type": "boolean"
                 }
             }
         }
